# tunnelcraft

./: .dockerignore  .editorconfig  .gitignore  BUILDING.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: audit-gaps.md
apps/cli/src/: main.rs
apps/desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
apps/desktop/resources/: com.tunnelcraft.daemon.plist
apps/desktop/scripts/: before-build.js  notarize.js
apps/desktop/src/main/: index.ts  ipc.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: App.tsx
apps/desktop/src/renderer/components/: CreditPanel.tsx  ExitNodePanel.tsx  KeyManagementModal.css  KeyManagementModal.tsx  ModeSelector.tsx  PrivacyLevelSelector.tsx  RequestPanel.css  RequestPanel.tsx  SettingsPanel.css  SettingsPanel.tsx  StatusCard.tsx  TitleBar.tsx
apps/desktop/src/renderer/context/: VPNContext.tsx
apps/mobile/: jest.config.js  package.json  tsconfig.json
apps/mobile/android/app/src/main/java/com/tunnelcraft/module/: TunnelCraftVPNModule.kt
apps/mobile/ios/TunnelCraft/NativeModules/: TunnelCraftVPNModule.m  TunnelCraftVPNModule.swift
apps/mobile/ios/TunnelCraft/TunnelCraftVPN/: PacketTunnelProvider.swift
apps/mobile/ios/TunnelCraftCore/Sources/TunnelCraftCore/: TunnelCraftCore.swift
apps/mobile/src/: App.tsx
apps/mobile/src/components/: StatsCards.tsx  index.ts
apps/mobile/src/context/: NativeTunnelContext.tsx  TunnelContext.tsx  index.ts
apps/mobile/src/native/: TunnelCraftVPN.ts
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/: HomeScreen.tsx  RequestScreen.tsx  SettingsScreen.tsx
apps/mobile/src/services/: DaemonService.ts  LogService.ts
crates/aggregator/: Cargo.toml
crates/aggregator/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: credits.rs  lib.rs  node.rs  packet.rs  request.rs  response.rs  sdk.rs  session.rs
crates/core/src/: shard.rs  types.rs
crates/crypto/src/: sign.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ipc.rs  lib.rs  node.rs  service.rs  windows_pipe.rs
crates/daemon/tests/: announce_test.rs  connection_scenario_test.rs
crates/erasure/src/: chunker.rs  lib.rs
crates/exit/src/: handler.rs  lib.rs
crates/ipc-client/src/: client.rs  lib.rs  protocol.rs
crates/keystore/src/: keypair.rs  paths.rs
crates/logging/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: behaviour.rs  bootstrap.rs  lib.rs  node.rs  proof_message.rs  protocol.rs  stream_manager.rs  subscription.rs
crates/network/tests/: shard_exchange.rs
crates/prover/: Cargo.toml  build.rs
crates/prover-guest/: Cargo.toml
crates/prover-guest-types/: Cargo.toml
crates/prover-guest-types/src/: lib.rs
crates/prover-guest/src/: main.rs
crates/prover/src/: compressor.rs  distribution.rs  lib.rs  merkle.rs  risc0.rs  sp1.rs  stub.rs  traits.rs
crates/relay/src/: handler.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: client.rs  lib.rs  light.rs  types.rs
crates/uniffi/src/: lib.rs
docs/: ARCHITECTURE_APPLICATIONS.md  DESIGN.md  STATUS.md  TECHNICAL.md
programs/tunnelcraft-settlement/src/: lib.rs
scripts/: deploy.sh
tests/: Cargo.toml  devnet_settlement.rs  e2e_tunnel.rs  full_tunnel_simulation.rs  proof_pipeline.rs  shard_flow.rs  ten_node_network.rs  ten_relay_settlement.rs
