[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/erasure",
    "crates/network",
    "crates/relay",
    "crates/exit",
    "crates/settlement",
    "crates/client",
    "crates/daemon",
    "crates/uniffi",
    "crates/keystore",
    "crates/ipc-client",
    "crates/logging",
    "crates/settings",
    "crates/app",
    "apps/cli",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TunnelCraft"]
license = "MIT"
repository = "https://github.com/craftec/tunnelcraft"

[workspace.dependencies]
# OpenSSL - vendored for static linking (avoids macOS code signature issues)
openssl = { version = "0.10", features = ["vendored"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
bincode = "1.3"

# Cryptography (dalek ecosystem - pure Rust, audited)
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"

# P2P networking
libp2p = { version = "0.55", features = ["tokio", "dns", "tcp", "noise", "yamux", "kad", "identify", "relay", "dcutr", "macros", "request-response", "mdns", "rendezvous", "gossipsub"] }

# Erasure coding
reed-solomon-erasure = "6.0"

# Solana (matching working versions from handcraft/tribunalcraft)
solana-program = "2.1"
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC
jsonrpc-core = "18.0"

# Utils
bytes = "1.5"
hex = "0.4"
base64 = "0.21"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }

# Internal crates
tunnelcraft-core = { path = "crates/core" }
tunnelcraft-crypto = { path = "crates/crypto" }
tunnelcraft-erasure = { path = "crates/erasure" }
tunnelcraft-network = { path = "crates/network" }
tunnelcraft-relay = { path = "crates/relay" }
tunnelcraft-exit = { path = "crates/exit" }
tunnelcraft-settlement = { path = "crates/settlement" }
tunnelcraft-client = { path = "crates/client" }
tunnelcraft-daemon = { path = "crates/daemon" }
tunnelcraft-keystore = { path = "crates/keystore" }
tunnelcraft-ipc-client = { path = "crates/ipc-client" }
tunnelcraft-logging = { path = "crates/logging" }
tunnelcraft-settings = { path = "crates/settings" }
tunnelcraft-app = { path = "crates/app" }
