[package]
name = "tunnelcraft-aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tunnelcraft-core = { workspace = true }
tunnelcraft-network = { workspace = true }
tunnelcraft-settlement = { workspace = true }
tunnelcraft-prover = { workspace = true }
tunnelcraft-crypto = { workspace = true }

sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
