[package]
name = "tunnelcraft-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
risc0 = ["tunnelcraft-prover/risc0"]

[dependencies]
tunnelcraft-core = { workspace = true }
tunnelcraft-crypto = { workspace = true }
tunnelcraft-erasure = { workspace = true }
tunnelcraft-network = { workspace = true }
tunnelcraft-relay = { workspace = true }
tunnelcraft-exit = { workspace = true }
tunnelcraft-settlement = { workspace = true }
tunnelcraft-prover = { workspace = true }
tunnelcraft-aggregator = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
parking_lot = "0.12"
