[package]
name = "tunnelcraft-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tunnelcraft-core = { workspace = true }
tunnelcraft-client = { workspace = true }
tunnelcraft-settlement = { workspace = true }
tunnelcraft-settings = { workspace = true }
tunnelcraft-keystore = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
