[package]
name = "craftnet-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
craftnet-core = { workspace = true }
craftnet-client = { workspace = true }
craftnet-settlement = { workspace = true }
craftec-ipc = { workspace = true }
craftec-settings = { workspace = true }
craftec-keystore = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
argon2 = "0.5"
rand = { workspace = true }

[dev-dependencies]
libp2p = { workspace = true }
