[package]
name = "tunnelcraft-prover-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
tunnelcraft-prover-guest-types = { path = "../prover-guest-types" }
risc0-zkvm = { version = "1.2", default-features = false, features = ["guest"] }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
