[package]
name = "tunnelcraft-prover"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
risc0 = ["dep:risc0-zkvm", "dep:bincode", "dep:tunnelcraft-prover-guest-types", "dep:risc0-build", "dep:hex"]

[dependencies]
tunnelcraft-core = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# risc0 dependencies (optional, behind feature flag)
risc0-zkvm = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
tunnelcraft-prover-guest-types = { workspace = true, optional = true }
hex = { workspace = true, optional = true }

[build-dependencies]
risc0-build = { workspace = true, optional = true }
