[package]
name = "tunnelcraft-settlement"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Force vendored OpenSSL for static linking (solana-sdk pulls in openssl)
openssl = { workspace = true }

tunnelcraft-core = { workspace = true }
solana-program = { workspace = true }
solana-client = "2.1"
solana-sdk = "2.1"
solana-sdk-ids = "2.1"
anchor-lang = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
bincode = { workspace = true }
bs58 = "0.5"

[dev-dependencies]
rand = { workspace = true }
